--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <h1>Athletics plots</h1>
   <p>Kies een plot:</p>
   <ul>
-    <li><a href="plot1.html">Plot 1 – Sprint</a></li>
-    <li><a href="plot2.html">Plot 2 – Middle distance</a></li>
-    <li><a href="plot3.html">Plot 3 – Relays</a></li>
-    <li><a href="plot4.html">Plot 4 – Combined</a></li>
+    <li><a href="wa_plot_all_disc_20251017_144638.html">Plot 1 – Restricted ages</a></li>
+    <li><a href="wa_plot_allages_all_disc_20251017_144636.html">Plot 2 – Also younger ages</a></li>
+    <li><a href="wa_plot_allages_europe_all_disc_20251017_144640.html">Plot 3 – Europe - Restricted ages</a></li>
+    <li><a href="wa_plot_europe_all_disc_20251017_144659.html">Plot 4 – Europe - Also younger ages</a></li>
   </ul>
 </body>
 </html>
